# test-spdlog

./: .gitignore  CMakeLists.txt  main.cpp
